# NovaOpenGL

./: CMakeLists.txt  README.md
opengl_3d/: CMakeLists.txt  PluginManager.cpp  RenderableManager.cpp  ShaderManager.cpp
opengl_3d/example/: nova.conf
opengl_3d/plugins/PointCloudRenderer/: CMakeLists.txt  PointCloudRenderable.cpp
opengl_3d/shaders/: BasicPointCloudShader.h
